[package]
name = "fskit-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10"
prost = "0.14"
prost-types = "0.14"
thiserror = "2.0"
tokio = { version = "1.47", features = ["net", "rt", "rt-multi-thread", "macros", "process", "sync", "io-util"] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
futures = "0.3"
