[package]
name = "fskit-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
bytes = "1.10"
futures = "0.3"
plist = "1.8"
prost = "0.14"
prost-types = "0.14"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
libc = "0.2"
