[package]
name = "fskit-rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Rust crate for FSKitBridge protocol & socket layer (TCP + Protobuf)"
repository = "https://github.com/debox-network/fskit-rs"
authors = ["Debox Network <dev@debox.network>"]
keywords = ["macos", "fskit", "extensionkit", "filesystem"]
categories = ["filesystem", "network-programming", "os::macos-apis"]

[dependencies]
async-trait = "0.1"
bytes = "1.10"
futures = "0.3"
libc = "0.2"
log = { version = "0.4", default-features = false }
plist = "1.8"
prost = "0.14"
prost-types = "0.14"
regex = "1.11"
thiserror = "2.0"
tokio = { version = "1.47", features = ["full"] }

[build-dependencies]
prost-build = "0.14"

[dev-dependencies]
env_logger = "0.11"

[[example]]
name = "basic_fs"
path = "examples/basic_fs.rs"
